Agregando los alt a las img

--- a/pages/experience.html
+++ b/pages/experience.html
@@ -20,7 +20,7 @@
             </label>
             
             <a href="../index.html" class="enlace">
-                <img class="logo" src="../media/logo.png" alt="">
+                <img class="logo" src="../media/logo.png" alt="logo">
             </a>
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
@@ -50,121 +50,120 @@
             <section id="galeria" class="container">
                 <div class="row ">
                     <div class="col-6 col-sm-4 col-md-3">
-                        <img src="../media/freya.jpg" alt="">
+                        <img src="../media/freya.jpg" alt="freya">
                     </div>
                     <div class="col-6 col-sm-4 col-md-3">
-                        <img src="../media/chou.jpg" alt="">
+                        <img src="../media/chou.jpg" alt="chou">
                     </div>
                     <div class="col-6 col-sm-4 col-md-3">
-                        <img src="../media/arlott.jpg" alt="">
+                        <img src="../media/arlott.jpg" alt="arlott">
                     </div>
                     <div class="col-6 col-sm-4 col-md-3">
-                        <img src="../media/joy.jpg" alt="">
+                        <img src="../media/joy.jpg" alt="joy">
                     </div>
                     <div class="col-6 col-sm-4 col-md-3">
-                        <img src="../media/fredrinn.jpg" alt="">
+                        <img src="../media/fredrinn.jpg" alt="fredrinn">
                     </div>
                     <div class="col-6 col-sm-4 col-md-3">
-                        <img src="../media/julian.jpg" alt="">
+                        <img src="../media/julian.jpg" alt="julian">
                     </div>
                     <div class="col-6 col-sm-4 col-md-3">
-                        <img src="../media/phoveus.jpg" alt="">
+                        <img src="../media/phoveus.jpg" alt="phoveus">
                     </div>
                     <div class="col-6 col-sm-4 col-md-3">
-                        <img src="../media/yu-zhong.jpg" alt="">
+                        <img src="../media/yu-zhong.jpg" alt="yu-zhong">
                     </div>
                     <div class="col-6 col-sm-4 col-md-3">
-                        <img src="../media/silvanna.jpg" alt="">
+                        <img src="../media/silvanna.jpg" alt="silvanna">
                     </div>
                     <div class="col-6 col-sm-4 col-md-3">
-                        <img src="../media/masha.jpg" alt="">
+                        <img src="../media/masha.jpg" alt="masha">
                     </div>
                     <div class="col-6 col-sm-4 col-md-3">
-                        <img src="../media/x-borg.jpg" alt="">
+                        <img src="../media/x-borg.jpg" alt="x-borg">
                     </div>
                     <div class="col-6 col-sm-4 col-md-3">
-                        <img src="../media/terizla.jpg" alt="">
-                    </div>
-                </div>
-                <div class="row ">
-                    <div class="col-6 col-sm-4 col-md-3">
-                        <img src="../media/badang.jpg" alt="">
-                    </div>
-                    <div class="col-6 col-sm-4 col-md-3">
-                        <img src="../media/minsittar.jpg" alt="">
-                    </div>
-                    <div class="col-6 col-sm-4 col-md-3">
-                        <img src="../media/thamuz.jpg" alt="">
-                    </div>
-                    <div class="col-6 col-sm-4 col-md-3">
-                        <img src="../media/aldous.jpg" alt="">
-                    </div>
-                    <div class="col-6 col-sm-4 col-md-3">
-                        <img src="../media/jawhead.jpg" alt="">
-                    </div>
-                    <div class="col-6 col-sm-4 col-md-3">
-                        <img src="../media/argus.jpg" alt="">
-                    </div>
-                    <div class="col-6 col-sm-4 col-md-3">
-                        <img src="../media/lapu-lapu.jpg" alt="">
-                    </div>
-                    <div class="col-6 col-sm-4 col-md-3">
-                        <img src="../media/ruby.jpg" alt="">
-                    </div>
-                    <div class="col-6 col-sm-4 col-md-3">
-                        <img src="../media/sun.jpg" alt="">
-                    </div>
-                    <div class="col-6 col-sm-4 col-md-3">
-                        <img src="../media/balmond.jpg" alt="">
-                    </div>
-                    <div class="col-6 col-sm-4 col-md-3">
-                        <img src="../media/bane.jpg" alt="">
-                    </div>
-                    <div class="col-6 col-sm-4 col-md-3">
-                        <img src="../media/zilong.jpg" alt="">
+                        <img src="../media/terizla.jpg" alt="terizla">
                     </div>
                 </div>
                 <div class="row ">
                     <div class="col-6 col-sm-4 col-md-3">
-                        <img src="../media/alice.jpg" alt="">
+                        <img src="../media/badang.jpg" alt="badang">
                     </div>
                     <div class="col-6 col-sm-4 col-md-3">
-                        <img src="../media/hilda.jpg" alt="">
+                        <img src="../media/minsittar.jpg" alt="minsittar">
                     </div>
                     <div class="col-6 col-sm-4 col-md-3">
-                        <img src="../media/edith.jpg" alt="">
+                        <img src="../media/thamuz.jpg" alt="thamuz">
                     </div>
                     <div class="col-6 col-sm-4 col-md-3">
-                        <img src="../media/khaleed.jpg" alt="">
+                        <img src="../media/aldous.jpg" alt="aldous">
                     </div>
                     <div class="col-6 col-sm-4 col-md-3">
-                        <img src="../media/dyrroth.jpg" alt="">
+                        <img src="../media/jawhead.jpg" alt="jawhead">
                     </div>
                     <div class="col-6 col-sm-4 col-md-3">
-                        <img src="../media/esmeralda.jpg" alt="">
+                        <img src="../media/argus.jpg" alt="argus">
                     </div>
                     <div class="col-6 col-sm-4 col-md-3">
-                        <img src="../media/guinevere.jpg" alt="">
+                        <img src="../media/lapu-lapu.jpg" alt="lapu-lapu">
                     </div>
                     <div class="col-6 col-sm-4 col-md-3">
-                        <img src="../media/martis.jpg" alt="">
+                        <img src="../media/ruby.jpg" alt="ruby">
                     </div>
                     <div class="col-6 col-sm-4 col-md-3">
-                        <img src="../media/gatotkaca.jpg" alt="">
+                        <img src="../media/sun.jpg" alt="sun">
                     </div>
                     <div class="col-6 col-sm-4 col-md-3">
-                        <img src="../media/alpha.jpg" alt="">
+                        <img src="../media/balmond.jpg" alt="balmond">
                     </div>
                     <div class="col-6 col-sm-4 col-md-3">
-                        <img src="../media/vexana.jpg" alt="">
+                        <img src="../media/bane.jpg" alt="bane">
                     </div>
                     <div class="col-6 col-sm-4 col-md-3">
-                        <img src="../media/belerick.jpg" alt="">
+                        <img src="../media/zilong.jpg" alt="zilong">
+                    </div>
+                </div>
+                <div class="row ">
+                    <div class="col-6 col-sm-4 col-md-3">
+                        <img src="../media/alice.jpg" alt="alice">
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-3">
+                        <img src="../media/hilda.jpg" alt="hilda">
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-3">
+                        <img src="../media/edith.jpg" alt="edith">
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-3">
+                        <img src="../media/khaleed.jpg" alt="khaleed">
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-3">
+                        <img src="../media/dyrroth.jpg" alt="dyrroth">
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-3">
+                        <img src="../media/esmeralda.jpg" alt="esmeralda">
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-3">
+                        <img src="../media/guinevere.jpg" alt="guinevere">
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-3">
+                        <img src="../media/martis.jpg" alt="martis">
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-3">
+                        <img src="../media/gatotkaca.jpg" alt="gatotkaca">
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-3">
+                        <img src="../media/alpha.jpg" alt="alpha">
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-3">
+                        <img src="../media/vexana.jpg" alt="vexana">
+                    </div>
+                    <div class="col-6 col-sm-4 col-md-3">
+                        <img src="../media/belerick.jpg" alt="belerick">
                     </div>
                 </div>
             </section>
     </main>
-
 
 <!-- FOOTER -->
 <footer>
