--- a/pages/gold.html
+++ b/pages/gold.html
@@ -21,7 +21,7 @@
             </label>
             
             <a href="../index.html" class="enlace">
-                <img class="logo" src="../media/logo.png" alt="">
+                <img class="logo" src="../media/logo.png" alt="logo">
             </a>
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
@@ -46,74 +46,73 @@
         <section id="galeria" class="container">
             <div class="row ">
                 <div class="col-6 col-sm-4 col-md-3">
-                    <img src="../media/beatrix.jpg" alt="">
+                    <img src="../media/beatrix.jpg" alt="beatrix">
                 </div>
                 <div class="col-6 col-sm-4 col-md-3">
-                    <img src="../media/brody.jpg" alt="">
+                    <img src="../media/brody.jpg" alt="brody">
                 </div>
                 <div class="col-6 col-sm-4 col-md-3">
-                    <img src="../media/popol-y-kupa.jpg" alt="">
+                    <img src="../media/popol-y-kupa.jpg" alt="popol-y-kupa">
                 </div>
                 <div class="col-6 col-sm-4 col-md-3">
-                    <img src="../media/wan-wan.jpg" alt="">
+                    <img src="../media/wan-wan.jpg" alt="wan-wan">
                 </div>
                 <div class="col-6 col-sm-4 col-md-3">
-                    <img src="../media/kimmy.jpg" alt="">
+                    <img src="../media/kimmy.jpg" alt="kimmy">
                 </div>
                 <div class="col-6 col-sm-4 col-md-3">
-                    <img src="../media/claude.jpg" alt="">
+                    <img src="../media/claude.jpg" alt="claude">
                 </div>
                 <div class="col-6 col-sm-4 col-md-3">
-                    <img src="../media/lesley.jpg" alt="">
+                    <img src="../media/lesley.jpg" alt="lesley">
                 </div>
                 <div class="col-6 col-sm-4 col-md-3">
-                    <img src="../media/moskov.jpg" alt="">
+                    <img src="../media/moskov.jpg" alt="moskov">
                 </div>
                 <div class="col-6 col-sm-4 col-md-3">
-                    <img src="../media/miya.jpeg" alt="">
+                    <img src="../media/miya.jpeg" alt="miya">
                 </div>
                 <div class="col-6 col-sm-4 col-md-3">
-                    <img src="../media/layla.jpg" alt="">
+                    <img src="../media/layla.jpg" alt="layla">
                 </div>
                 <div class="col-6 col-sm-4 col-md-3">
-                    <img src="../media/clint.jpg" alt="">
+                    <img src="../media/clint.jpg" alt="clint">
                 </div>
                 <div class="col-6 col-sm-4 col-md-3">
-                    <img src="../media/bruno.jpg" alt="">
+                    <img src="../media/bruno.jpg" alt="bruno">
                 </div>
             </div>
             <div class="row ">
                 <div class="col-6 col-sm-4 col-md-3">
-                    <img src="../media/karrie.jpg" alt="">
+                    <img src="../media/karrie.jpg" alt="karrie">
                 </div>
                 <div class="col-6 col-sm-4 col-md-3">
-                    <img src="../media/melissa.jpg" alt="">
+                    <img src="../media/melissa.jpg" alt="melissa">
                 </div>
                 <div class="col-6 col-sm-4 col-md-3">
-                    <img src="../media/natan.jpg" alt="">
+                    <img src="../media/natan.jpg" alt="natan">
                 </div>
                 <div class="col-6 col-sm-4 col-md-3">
-                    <img src="../media/granger.jpg" alt="">
+                    <img src="../media/granger.jpg" alt="granger">
                 </div>
                 <div class="col-6 col-sm-4 col-md-3">
-                    <img src="../media/hanabi.jpg" alt="">
+                    <img src="../media/hanabi.jpg" alt="hanabi">
                 </div>
                 <div class="col-6 col-sm-4 col-md-3">
-                    <img src="../media/irithel.jpg" alt="">
+                    <img src="../media/irithel.jpg" alt="irithel">
                 </div>
                 <div class="col-6 col-sm-4 col-md-3">
-                    <img src="../media/yi-sun-shin.jpg" alt="">
+                    <img src="../media/yi-sun-shin.jpg" alt="yi-sun-shin">
                 </div>
                 <div class="col-6 col-sm-4 col-md-3">
-                    <img src="../media/edith.jpg" alt="">
+                    <img src="../media/edith.jpg" alt="edith">
                 </div>
                 <div class="col-6 col-sm-4 col-md-3">
-                    <img src="../media/roger.jpg" alt="">
+                    <img src="../media/roger.jpg" alt="roger">
                 </div>
             </div>
         </section>
     </main>
-
 
     <!-- FOOTER -->
     <footer>
