--- a/pages/jungle.html
+++ b/pages/jungle.html
@@ -20,7 +20,7 @@
             </label>
             
             <a href="../index.html" class="enlace">
-                <img class="logo" src="../media/logo.png" alt="">
+                <img class="logo" src="../media/logo.png" alt="logo">
             </a>
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
@@ -47,122 +47,121 @@
         <section id="galeria" class="container">
             <div class="row ">
                 <div class="col-6 col-sm-4 col-md-3">
-                    <img src="../media/freya.jpg" alt="">
+                    <img src="../media/freya.jpg" alt="freya">
                 </div>
                 <div class="col-6 col-sm-4 col-md-3">
-                    <img src="../media/chou.jpg" alt="">
+                    <img src="../media/chou.jpg" alt="chou">
                 </div>
                 <div class="col-6 col-sm-4 col-md-3">
-                    <img src="../media/arlott.jpg" alt="">
+                    <img src="../media/arlott.jpg" alt="arlott">
                 </div>
                 <div class="col-6 col-sm-4 col-md-3">
-                    <img src="../media/fanny.jpg" alt="">
+                    <img src="../media/fanny.jpg" alt="fanny">
                 </div>
                 <div class="col-6 col-sm-4 col-md-3">
-                    <img src="../media/joy.jpg" alt="">
+                    <img src="../media/joy.jpg" alt="joy">
                 </div>
                 <div class="col-6 col-sm-4 col-md-3">
-                    <img src="../media/julian.jpg" alt="">
+                    <img src="../media/julian.jpg" alt="julian">
                 </div>
                 <div class="col-6 col-sm-4 col-md-3">
-                    <img src="../media/aulus.jpg" alt="">
+                    <img src="../media/aulus.jpg" alt="aulus">
                 </div>
                 <div class="col-6 col-sm-4 col-md-3">
-                    <img src="../media/paquito.jpg" alt="">
+                    <img src="../media/paquito.jpg" alt="paquito">
                 </div>
                 <div class="col-6 col-sm-4 col-md-3">
-                    <img src="../media/barats.jpg" alt="">
+                    <img src="../media/barats.jpg" alt="barats">
                 </div>
                 <div class="col-6 col-sm-4 col-md-3">
-                    <img src="../media/baxia.jpg" alt="">
+                    <img src="../media/baxia.jpg" alt="baxia">
                 </div>
                 <div class="col-6 col-sm-4 col-md-3">
-                    <img src="../media/ling.jpg" alt="">
+                    <img src="../media/ling.jpg" alt="ling">
                 </div>
                 <div class="col-6 col-sm-4 col-md-3">
-                    <img src="../media/kimmy.jpg" alt="">
-                </div>
-            </div>
-            <div class="row ">
-                <div class="col-6 col-sm-4 col-md-3">
-                    <img src="../media/hanzo.jpg" alt="">
-                </div>
-                <div class="col-6 col-sm-4 col-md-3">
-                    <img src="../media/leomord.jpg" alt="">
-                </div>
-                <div class="col-6 col-sm-4 col-md-3">
-                    <img src="../media/selena.jpg" alt="">
-                </div>
-                <div class="col-6 col-sm-4 col-md-3">
-                    <img src="../media/gusion.jpg" alt="">
-                </div>
-                <div class="col-6 col-sm-4 col-md-3">
-                    <img src="../media/lancelot.jpg" alt="">
-                </div>
-                <div class="col-6 col-sm-4 col-md-3">
-                    <img src="../media/harley.jpg" alt="">
-                </div>
-                <div class="col-6 col-sm-4 col-md-3">
-                    <img src="../media/natalia.jpg" alt="">
-                </div>
-                <div class="col-6 col-sm-4 col-md-3">
-                    <img src="../media/hayabusa.jpg" alt="">
-                </div>
-                <div class="col-6 col-sm-4 col-md-3">
-                    <img src="../media/karina.jpg" alt="">
-                </div>
-                <div class="col-6 col-sm-4 col-md-3">
-                    <img src="../media/balmond.jpg" alt="">
-                </div>
-                <div class="col-6 col-sm-4 col-md-3">
-                    <img src="../media/saber.jpg" alt="">
-                </div>
-                <div class="col-6 col-sm-4 col-md-3">
-                    <img src="../media/zilong.jpg" alt="">
+                    <img src="../media/kimmy.jpg" alt="kimmy">
                 </div>
             </div>
             <div class="row ">
                 <div class="col-6 col-sm-4 col-md-3">
-                    <img src="../media/alucard.jpg" alt="">
+                    <img src="../media/hanzo.jpg" alt="hanzo">
                 </div>
                 <div class="col-6 col-sm-4 col-md-3">
-                    <img src="../media/roger.jpg" alt="">
+                    <img src="../media/leomord.jpg" alt="leomord">
                 </div>
                 <div class="col-6 col-sm-4 col-md-3">
-                    <img src="../media/yin.jpg" alt="">
+                    <img src="../media/selena.jpg" alt="selena">
                 </div>
                 <div class="col-6 col-sm-4 col-md-3">
-                    <img src="../media/aamon.jpg" alt="">
+                    <img src="../media/gusion.jpg" alt="gusion">
                 </div>
                 <div class="col-6 col-sm-4 col-md-3">
-                    <img src="../media/benedetta.jpg" alt="">
+                    <img src="../media/lancelot.jpg" alt="lancelot">
                 </div>
                 <div class="col-6 col-sm-4 col-md-3">
-                    <img src="../media/dyrroth.jpg" alt="">
+                    <img src="../media/harley.jpg" alt="harley">
                 </div>
                 <div class="col-6 col-sm-4 col-md-3">
-                    <img src="../media/granger.jpg" alt="">
+                    <img src="../media/natalia.jpg" alt="natalia">
                 </div>
                 <div class="col-6 col-sm-4 col-md-3">
-                    <img src="../media/martis.jpg" alt="">
+                    <img src="../media/hayabusa.jpg" alt="hayabusa">
                 </div>
                 <div class="col-6 col-sm-4 col-md-3">
-                    <img src="../media/alpha.jpg" alt="">
+                    <img src="../media/karina.jpg" alt="karina">
                 </div>
                 <div class="col-6 col-sm-4 col-md-3">
-                    <img src="../media/cyclops.jpg" alt="">
+                    <img src="../media/balmond.jpg" alt="balmond">
                 </div>
                 <div class="col-6 col-sm-4 col-md-3">
-                    <img src="../media/esmeralda.jpg" alt="">
+                    <img src="../media/saber.jpg" alt="saber">
                 </div>
                 <div class="col-6 col-sm-4 col-md-3">
-                    <img src="../media/natan.jpg" alt="">
+                    <img src="../media/zilong.jpg" alt="zilong">
+                </div>
+            </div>
+            <div class="row ">
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/alucard.jpg" alt="alucard">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/roger.jpg" alt="roger">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/yin.jpg" alt="yin">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/aamon.jpg" alt="aamon">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/benedetta.jpg" alt="benedetta">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/dyrroth.jpg" alt="dyrroth">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/granger.jpg" alt="granger">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/martis.jpg" alt="martis">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/alpha.jpg" alt="alpha">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/cyclops.jpg" alt="cyclops">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/esmeralda.jpg" alt="esmeralda">
+                </div>
+                <div class="col-6 col-sm-4 col-md-3">
+                    <img src="../media/natan.jpg" alt="natan">
                 </div>
             </div>
     </div>
         </section>
     </main>
-
 
     <!-- FOOTER -->
     <footer>
