--- a/pages/roam.html
+++ b/pages/roam.html
@@ -21,7 +21,7 @@
             </label>
             
             <a href="../index.html" class="enlace">
-                <img class="logo" src="../media/logo.png" alt="">
+                <img class="logo" src="../media/logo.png" alt="logo">
             </a>
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
@@ -48,121 +48,120 @@
         <section id="galeria" class="container">
             <div class="row ">
             <div class="col-6 col-sm-4 col-md-3">
-                <img src="../media/fanny.jpg" alt="">
+                <img src="../media/fanny.jpg" alt="fanny">
             </div>
             <div class="col-6 col-sm-4 col-md-3">
-                <img src="../media/akai.jpg" alt="">
+                <img src="../media/akai.jpg" alt="akai">
             </div>
             <div class="col-6 col-sm-4 col-md-3">
-                <img src="../media/franco.jpg" alt="">
+                <img src="../media/franco.jpg" alt="franco">
             </div>
             <div class="col-6 col-sm-4 col-md-3">
-                <img src="../media/floryn.jpg" alt="">
+                <img src="../media/floryn.jpg" alt="floryn">
             </div>
             <div class="col-6 col-sm-4 col-md-3">
-                <img src="../media/faramis.jpg" alt="">
+                <img src="../media/faramis.jpg" alt="faramis">
             </div>
             <div class="col-6 col-sm-4 col-md-3">
-                <img src="../media/mathilda.jpg" alt="">
+                <img src="../media/mathilda.jpg" alt="mathilda">
             </div>
             <div class="col-6 col-sm-4 col-md-3">
-                <img src="../media/barats.jpg" alt="">
+                <img src="../media/barats.jpg" alt="barats">
             </div>
             <div class="col-6 col-sm-4 col-md-3">
-                <img src="../media/atlas.jpg" alt="">
+                <img src="../media/atlas.jpg" alt="atlas">
             </div>
             <div class="col-6 col-sm-4 col-md-3">
-                <img src="../media/baxia.jpg" alt="">
+                <img src="../media/baxia.jpg" alt="baxia">
             </div>
             <div class="col-6 col-sm-4 col-md-3">
-                <img src="../media/minsittar.jpg" alt="">
+                <img src="../media/minsittar.jpg" alt="minsittar">
             </div>
             <div class="col-6 col-sm-4 col-md-3">
-                <img src="../media/kaja.jpg" alt="">
+                <img src="../media/kaja.jpg" alt="kaja">
             </div>
             <div class="col-6 col-sm-4 col-md-3">
-                <img src="../media/uranus.jpg" alt="">
+                <img src="../media/uranus.jpg" alt="uranus">
             </div>
             </div>
             <div class="row ">
             <div class="col-6 col-sm-4 col-md-3">
-                <img src="../media/hylos.jpg" alt="">
+                <img src="../media/hylos.jpg" alt="hylos">
             </div>
             <div class="col-6 col-sm-4 col-md-3">
-                <img src="../media/grock.jpg" alt="">
+                <img src="../media/grock.jpg" alt="grock">
             </div>
             <div class="col-6 col-sm-4 col-md-3">
-                <img src="../media/ruby.jpg" alt="">
+                <img src="../media/ruby.jpg" alt="ruby">
             </div>
             <div class="col-6 col-sm-4 col-md-3">
-                <img src="../media/lolita.jpg" alt="">
+                <img src="../media/lolita.jpg" alt="lolita">
             </div>
             <div class="col-6 col-sm-4 col-md-3">
-                <img src="../media/nana.jpg" alt="">
+                <img src="../media/nana.jpg" alt="nana">
             </div>
             <div class="col-6 col-sm-4 col-md-3">
-                <img src="../media/tigreal.jpg" alt="">
+                <img src="../media/tigreal.jpg" alt="tigreal">
             </div>
             <div class="col-6 col-sm-4 col-md-3">
-                <img src="../media/rafaela.jpg" alt="">
+                <img src="../media/rafaela.jpg" alt="rafaela">
             </div>
             <div class="col-6 col-sm-4 col-md-3">
-                <img src="../media/angela.jpg" alt="">
+                <img src="../media/angela.jpg" alt="angela">
             </div>
             <div class="col-6 col-sm-4 col-md-3">
-                <img src="../media/diggie.jpg" alt="">
+                <img src="../media/diggie.jpg" alt="diggie">
             </div>
             <div class="col-6 col-sm-4 col-md-3">
-                <img src="../media/estes.jpg" alt="">
+                <img src="../media/estes.jpg" alt="estes">
             </div>
             <div class="col-6 col-sm-4 col-md-3">
-                <img src="../media/edith.jpg" alt="">
+                <img src="../media/edith.jpg" alt="edith">
             </div>
             <div class="col-6 col-sm-4 col-md-3">
-                <img src="../media/gloo.jpg" alt="">
+                <img src="../media/gloo.jpg" alt="gloo">
             </div>
             </div>
             <div class="row ">
             <div class="col-6 col-sm-4 col-md-3">
-                <img src="../media/carmilla.jpg" alt="">
+                <img src="../media/carmilla.jpg" alt="carmilla">
             </div>
             <div class="col-6 col-sm-4 col-md-3">
-                <img src="../media/khufra.jpg" alt="">
+                <img src="../media/khufra.jpg" alt="khufra">
             </div>
             <div class="col-6 col-sm-4 col-md-3">
-                <img src="../media/belerick.jpg" alt="">
+                <img src="../media/belerick.jpg" alt="belerick">
             </div>
             <div class="col-6 col-sm-4 col-md-3">
-                <img src="../media/gatotkaca.jpg" alt="">
+                <img src="../media/gatotkaca.jpg" alt="gatotkaca">
             </div>
             <div class="col-6 col-sm-4 col-md-3">
-                <img src="../media/johnson.jpg" alt="">
+                <img src="../media/johnson.jpg" alt="johnson">
             </div>
             <div class="col-6 col-sm-4 col-md-3">
-                <img src="../media/novaria.jpg" alt="">
+                <img src="../media/novaria.jpg" alt="novaria">
             </div>
             <div class="col-6 col-sm-4 col-md-3">
-                <img src="../media/esmeralda.jpg" alt="">
+                <img src="../media/esmeralda.jpg" alt="esmeralda">
             </div>
             <div class="col-6 col-sm-4 col-md-3">
-                <img src="../media/balmond.jpg" alt="">
+                <img src="../media/balmond.jpg" alt="balmond">
             </div>
             <div class="col-6 col-sm-4 col-md-3">
-                <img src="../media/hilda.jpg" alt="">
+                <img src="../media/hilda.jpg" alt="hilda">
             </div>
             <div class="col-6 col-sm-4 col-md-3">
-                <img src="../media/jawhead.jpg" alt="">
+                <img src="../media/jawhead.jpg" alt="jawhead">
             </div>
             <div class="col-6 col-sm-4 col-md-3">
-                <img src="../media/selena.jpg" alt="">
+                <img src="../media/selena.jpg" alt="selena">
             </div>
             <div class="col-6 col-sm-4 col-md-3">
-                <img src="../media/leomord.jpg" alt="">
+                <img src="../media/leomord.jpg" alt="leomord">
             </div>
             </div>
         </section>
     </main>
-
 
     <!-- FOOTER -->
     <footer>
