--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -21,7 +21,7 @@
             </label>
             
             <a href="../index.html" class="enlace">
-                <img class="logo" src="../media/logo.png" alt="">
+                <img class="logo" src="../media/logo.png" alt="logo">
             </a>
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
