Agregando etiquetas meta description y keywords

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Mobile Legends: Bang Bang es un juego de estilo MOBA para dispositivos móviles, creado por la compañia Shanghai Mooton Tecnhology.">
+    <meta name="keywords" content="MLBB, Mobile Legend, MOBA, Mooton, Experience, Roam, Middle, Jungle, Gold, Equipo">
     <link rel="icon" type="x-icon" href="./media/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -21,7 +23,6 @@
             <label for="check" class="menu-icon">
                 <i class='bx bx-menu ' style='color:#ffffff'  ></i>
             </label>
-            
             <a href="../index.html" class="enlace">
                 <img class="logo" src="./media/logo.png" alt="">
             </a>
