--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Pagina de contacto: Envía consultas, cuéntanos tu experiencia con el juego, danos sugerencias para mejorar la página">
+    <meta name="keywords" content="Contacto, Heroes, Guía, Tips, Asesinos, Magos, Combatientes,Tiradores, Apoyos, Tanques, Sugerencias, Consultas">
     <link rel="icon" type="x-icon" href="../media/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -41,8 +43,6 @@
 <h1>CONTACTO</h1>
 <div class="desarrollo">
     <p class="texto-contacto">
-        <!-- Contanos que te parecio la pagina,  -->
-        <!-- Danos tu opinion al respecto, saber que es lo que te gustaria ver, contenido que desees ver o cambios que harias -->
         Escribinos queremos conocerte, saber que opinas de la pagina, que te gustaría ver o que cambios harias. ¿Conoces el juego? ¿Cual es tu personaje favorito?
     </p>
     <p class="texto-contacto"></p>
