--- a/pages/gold.html
+++ b/pages/gold.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Jugar en la línea de oro en MLBB: Farmear oro, asistir en peleas, derribar torres y llevar a tu equipo a la victoria estratégicamente">
+    <meta name="keywords" content="Guia, Tips, Heroes, Tiradores,Daño, Distancia, Derribar, Torres, Emboscadas, Lord, Destruir, Enemigos">
     <link rel="icon" type="x-icon" href="../media/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -40,7 +42,7 @@
         <div class="desarrollo">
             
             <p class="texto-gold">La linea de <span class="gold">ORO</span> es una de las tres principales rutas del mapa. Esta es una de las principales fuentes de ingresos de oro para los jugadores. Tiene importancia en el juego tardio, ya que a medida que avanzas en el juego, puedes rotar a otras partes del mapa y asi ayudar a tus compañeros a eliminar enemigosen peleas en equipo o a destruir las torres de las otras lineas. Dominar esta linea te permitira tener una buena ventaja en la partida y contribuir a la victoria de tu equipo.</p> 
-            <p class="texto-gold">En esta linea se recomienda usar <span class="gold">TIRADORES</span>. Estos hacen daño a distancia con una produccion de daño constante y alta. Su objetivo principal es infligir daño a los enemigos desde una distancia segura. Son esenciales para derribar torres y destruit al enemigo en cuestion de segundos cuando la partida este avanzada.</p> 
+            <p class="texto-gold">En esta linea se recomienda usar <span class="gold">TIRADORES</span>. Estos hacen daño a distancia con una produccion de daño constante y alta. Su objetivo principal es infligir daño a los enemigos desde una distancia segura. Son esenciales para derribar torres y destruir al enemigo en cuestion de segundos cuando la partida este avanzada.</p> 
         </div>
         <hr>
         <h2>HEROES</h2>
