--- a/pages/jungle.html
+++ b/pages/jungle.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Jugar en la jungla en MLBB: Mata monstruos neutrales, embosca a los enemigos y ayuda a todas las líneas para dominar y asegurar la victoria.">
+    <meta name="keywords" content="Guía, Tips, Heroes, Estrategias, Counters, Asesinos, Magos, Tiradores, Combatientes, Tanques, Buffs, Tortuga, Lord, Emboscadas">
     <link rel="icon" type="x-icon" href="../media/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
