--- a/pages/middle.html
+++ b/pages/middle.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Jugar en la línea del medio en MLBB: Haz daño, apoya a tu equipo, descubre la junglapara dominar la partida y asegurar la victoria.">
+    <meta name="keywords" content="Guia, Tips, Heroes, Magos, Daño, Mágico, Emboscadas, Counters, Apoyo, Recorrer">
     <link rel="icon" type="x-icon" href="../media/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
