--- a/pages/roam.html
+++ b/pages/roam.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Jugar como Roamer en MLBB: Apoya a todo el equipo, asiste en peleas, controla el mapa y asegura la victoria con tu versatilidad y utilidad">
+    <meta name="keywords" content="Heroes, Estrategias, Counters, Apoyo, Tanque, Emboscadas, Ganks, Resistencia, Daño, Guia, Tips">
     <link rel="icon" type="x-icon" href="../media/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
